--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "del": "^2.2.2",
     "extract-css-block-webpack-plugin": "^1.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-imagemin": "^3.0.3",
@@ -31,6 +32,7 @@
     "require-dir": "^0.3.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1",
     "webpack-stream": "^3.2.0"
